--- a/zad4.html
+++ b/zad4.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="zad1.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="zad2.html">Data</a>
         <a href="zad3.html">Images</a>
         <a href="zad4.html">Form</a>
