--- a/zad3.html
+++ b/zad3.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="zad2.html">Data</a>
+        <a href="zad3.html">Images</a>
+        <a href="zad4.html">Form</a>
+        <a href="zad5.html">Author</a>
+    </div>
     <a href="https://en.wikipedia.org/wiki/Information_technology">
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Z3_Deutsches_Museum.JPG" alt="wiki it">
     </a>
