--- a/zad5.html
+++ b/zad5.html
@@ -6,6 +6,13 @@
     <title>Author</title>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="zad2.html">Data</a>
+        <a href="zad3.html">Images</a>
+        <a href="zad4.html">Form</a>
+        <a href="zad5.html">Author</a>
+    </div>
     <h1>Author</h1>
     <b>
     <ol style="list-style-type:upper-latin;">
