--- a/zad2.html
+++ b/zad2.html
@@ -9,10 +9,10 @@
 <body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
-        <a href="data.html">Data</a>
-        <a href="images.html">Images</a>
-        <a href="#about">Form</a>
-        <a href="#author">Author</a>
+        <a href="zad2.html">Data</a>
+        <a href="zad3.html">Images</a>
+        <a href="zad4.html">Form</a>
+        <a href="zad5.html">Author</a>
     </div>
     <div class="centered-title">
         <h1>Information Technology Data</h1>
