--- a/zad5.html
+++ b/zad5.html
@@ -16,9 +16,9 @@
     <h1>Author</h1>
     <b>
     <ol style="list-style-type:upper-latin;">
-        <li>Maksymilian Bukowski</li>
-        <li>Sebastian Duda</li>
-        <li>Dominik Konaszyński</li>
+        <li>Maksymilian Bukowski 111111</li>
+        <li>Sebastian Duda 222222</li>
+        <li>Dominik Konaszyński 333333</li>
     </ol></b>
     <a href="https://github.com/SebastianDuda0106/mocktest2.git">github respository</a>
     <a href="style.css">Style</a>
