--- a/zad5.html
+++ b/zad5.html
@@ -21,8 +21,8 @@
         <li>Sebastian Duda 222222</li>
         <li>Dominik Konaszyński 333333</li>
     </ol></b>
-    <a href="https://github.com/SebastianDuda0106/mocktest2.git">github respository</a>
-    <a href="style.css">Style</a>
-    <a href="https://github.com/SebastianDuda0106/mocktest2/network">Github Network Graph</a>
+    <a href="https://github.com/SebastianDuda0106/mocktest2.git">github respository</a><br>
+    <a href="style.css">Style</a><br>
+    <a href="https://github.com/SebastianDuda0106/mocktest2/network">Github Network Graph</a><br>
 </body>
 </html>
