--- a/zad3.html
+++ b/zad3.html
@@ -14,6 +14,7 @@
         <a href="zad4.html">Form</a>
         <a href="zad5.html">Author</a>
     </div>
+    <h1>Images</h1>
     <a href="https://en.wikipedia.org/wiki/Information_technology">
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Z3_Deutsches_Museum.JPG" alt="wiki it">
     </a>
